--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Lab1</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="style.scss">
 </head>
+
 <body>
-  <app-root></app-root>
+  <style>
+  </style>
+  <app-root>
+    <!-- <h1>Hello is my Home in Anguler - My name is KSboy!</h1> -->
+  </app-root>
+
 </body>
+
 </html>
